# OptIlmDriveX

./: README.md
config/OptilmConfiguration/: UserConfiguration.adtfproject
config/OptilmConfiguration/adtfsessions/: OptIlmDriveX_demo.adtfsession  OptIlmDriveX_demo.adtfuilayout  OptIlm_autonomus_driving.adtfsession  OptIlm_autonomus_driving.adtfuilayout  base_control_test_session.adtfsession  base_control_test_session.adtfuilayout  default_session_linux.adtfsession  default_session_linux.adtfuilayout
config/OptilmConfiguration/adtfsessions/adtfgraphs/: .signal_scope_view.ui_service.adtf_disptb  .signal_table_view.ui_service.adtf_disptb  .signal_tree_view.ui_service.adtf_disptb  default_graph.adtfconfiglayout  default_graph.adtfgraph  default_graph.adtfproperties
config/OptilmConfiguration/adtfsessions/adtfsystems/: default_system_linux.adtfgraph  default_system_linux.adtfproperties
configuration_files/: Free_demo_finalevent_2018_roadSigns_v3 .xml  Maneuverlist.xml  Maneuverlist_left (copy 1).xml  Maneuverlist_left.xml  Maneuverlist_parking.xml  aadc2018-final-v004.xodr  aadc_testevent_2018_signs_v_2_0.xml  finalevent_2018_roadSigns_v2.xml  finalevent_2018_roadSigns_v3.xml  maneuver_crossing (copy 1).xml  maneuver_crossing.xml  signs_Ramper.xml  signs_Teppisch.xml  signs_Teppisch_augumented (copy 1).xml  signs_Teppisch_augumented.xml
description/: aadc.description
include/: TU_Ilmenau_SOP.h  aadc_jury.h  aadc_structs.h
src/aadcBase/arduino/ArduinoActuator/: ArduinoActuator.cpp
src/aadcDemo/datafilter/FisheyeUndistortion/: FisheyeUndistortion.cpp
src/aadcDemo/jury/DriverModule/: DriverModuleFilter.cpp
src/aadcUser/: CMakeLists.txt
src/aadcUser/OptIlmDriveX/: CMakeLists.txt
src/aadcUser/OptIlmDriveX/OptIlm_ConverterWheels/: CMakeLists.txt  OptIlm_ConverterWheels.cpp  OptIlm_ConverterWheels.h
src/aadcUser/OptIlmDriveX/OptIlm_DriveModelTester/: CMakeLists.txt  OptIlm_DriveModelTester.cpp  OptIlm_DriveModelTester.h  OptIlm_DriveModelTesterWidget.cpp  OptIlm_DriveModelTesterWidget.h  car_controller.ui  stdafx.h
src/aadcUser/OptIlmDriveX/OptIlm_DriverModule/: CMakeLists.txt  OptIlm_DriverModule.cpp  OptIlm_DriverModule.h
src/aadcUser/OptIlmDriveX/OptIlm_EmergencyBreak/: CMakeLists.txt  OptIlm_EmergencyBreak.cpp  OptIlm_EmergencyBreak.h
src/aadcUser/OptIlmDriveX/OptIlm_ImageProcessing/: CMakeLists.txt  OptIlm_ImageProcessing.cpp  OptIlm_ImageProcessing.h
src/aadcUser/OptIlmDriveX/OptIlm_MarkerDetector/: CMakeLists.txt  OptIlm_MarkerDetector.cpp  OptIlm_MarkerDetector.h
src/aadcUser/OptIlmDriveX/OptIlm_MarkerPositioning/: CMakeLists.txt  OptIlm_MarkerPositioning.cpp  OptIlm_MarkerPositioning.h
src/aadcUser/OptIlmDriveX/OptIlm_ModelPredictiveController/: CMakeLists.txt  OptIlm_ModelPredictiveController.cpp  OptIlm_ModelPredictiveController.h
src/aadcUser/OptIlmDriveX/OptIlm_SignalValueGenerator/: CMakeLists.txt  OptIlm_SignalValueGenerator.cpp  OptIlm_SignalValueGenerator.h  Test.txt
src/aadcUser/OptIlmDriveX/OptIlm_TCPCommunication/: CMakeLists.txt  Dijkstra.cpp  TcpSink.h  TcpSource.cpp  TcpSource.h
src/aadcUser/OptIlmDriveX/OptIlm_WheelSpeedController/: CMakeLists.txt  OptIlm_WheelSpeedController.cpp  OptIlm_WheelSpeedController.h
src/aadcUser/OptIlmDriveX/OptIlm_WheelsAngleConverter/: CMakeLists.txt  OptIlm_WheelsAngleConverter.cpp  OptIlm_WheelsAngleConverter.h
src/aadcUser/OptIlmDriveX/Optilm_AutonomousDriving/: CMakeLists.txt  Data_Processing.cpp  Optilm_AutonomousDriving.cpp  Optilm_AutonomousDriving.h  State_Control.cpp
src/aadcUser/OptIlmDriveX/Optilm_MapVisualization/: CMakeLists.txt  Optilm_MapVisualization.cpp  Optilm_MapVisualization.h
