add_subdirectory(OptIlm_EmergencyBreak)
add_subdirectory(OptIlm_WheelSpeedController)
add_subdirectory(OptIlm_SignalValueGenerator)
add_subdirectory(OptIlm_ConverterWheels)
add_subdirectory(OptIlm_ImageProcessing)
add_subdirectory(OptIlm_DriveModelTester)
add_subdirectory(OptIlm_MarkerDetector)
add_subdirectory(OptIlm_MarkerPositioning)
add_subdirectory(OptIlm_ModelPredictiveController)
add_subdirectory(OptIlm_WheelsAngleConverter)
add_subdirectory(Optilm_AutonomousDriving)
#add_subdirectory(OptIlm_DriverModule)
add_subdirectory(Optilm_MapVisualization)
add_subdirectory(OptIlm_TCPCommunication)

